# commands-manager

./: .gitignore  Cargo.toml  Config.toml  Readme.md  build-release.sh  config.toml
src/: main.rs
src/controllers/: maincontroller.rs  mod.rs
src/models/: app.rs
src/views/: mainview.rs  mod.rs
src/views/elements/: section.rs
