[package]
name = "ssh-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
toml = {version = "0.8.14", features = ["preserve_order"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0"
uuid = {version = "1.9.1", features = ["fast-rng", "v4", "macro-diagnostics",]}

[profile.release]
panic = 'abort'
